# LocalBot

./: .env.example  .gitignore  =8.0  ModelFile.example  README.md  REFACTORING_SUMMARY.md  config.yaml  events.txt  pyproject.toml  requirements.txt  run.bat  run.command  run.sh  test_preset_apply.py
.github/workflows/: tests.yml
assets/: styles.tcss
data/: instructions.md  memory.md  presets.yaml
data/tui_history/: default.json
docs/: architecture.md  troubleshooting.md  tui.md
femtobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: install_cli.sh  manage_db.py
src/: __init__.py  cli.py  client.py  constants.py  main.py  telegram_bot.py  tui.py
src/handlers/: audio.py  base.py  commands.py  document.py  photo.py  video.py  voice.py
src/jobs/: base.py  cleanup.py  email_digest.py  events.py  inactivity.py
src/middleware/: rate_limiter.py
src/services/: command_service.py  deep_research_service.py  media_service.py  upload_service.py
src/services/deep_research/: models.py  orchestrator.py  reader.py  writer.py
src/state/: chat_manager.py
src/tui_handlers/: command_processor.py  slash_commands.py
src/tui_utils/: history_manager.py
tests/: conftest.py
tests/unit/: test_client.py  test_config_loader.py  test_cron_utils.py  test_telegram_utils.py
utils/: __init__.py  audio_utils.py  config_loader.py  cron_utils.py  document_utils.py  email_utils.py  logger.py  search_utils.py  telegram_utils.py  twitter_utils.py  wiz_utils.py
